--- a/mysite/shop/templates/base.html
+++ b/mysite/shop/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satino Rožių Puokštės</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -130,7 +131,6 @@ nav a:hover,
             border: 1px solid #e0e0e0;
             border-radius: 5px;
             margin-bottom: 20px;
-            padding: 20px;
             box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
@@ -207,8 +207,71 @@ nav a:hover,
         border: 1px solid #734F59;
     }
 
+        .card-body{
+            position: relative;
+            background-color: #ECE1E2;
+            padding: 20px;
+            box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1);
+            border: 4px solid #C4B0B2;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+        }
+
+        .text-center{
+            overflow: hidden;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+            width: 600px;
+        }
+
+
+        .img-fluid{
+            width: 600px;
+            height: 700px;
+        }
+
+        .card {
+            background-color: #ECE1E2;
+            width: 650px;
+        }
+
+        .thumbnail-container{
+            text-align: center;
+            margin-bottom: 30px;
+            position: relative;
+            margin-top: 10px;
+        }
+
+        .color-thumbnails{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 3fr)); /* Flexible column count */
+            gap: 15px;
+        }
+
+        .color-thumbnail{
+            width: 65px;
+            height: 65px;
+        }
+
+        .btn-add-to-cart{
+            background-color: #C4B0B2;
+            color: #734F59;
+            padding: 10px 20px;
+            border: 2px solid #734F59;
+            border-radius: 50px;
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+        }
+        .color-thumbnail img {
+            object-fit: contain; /* Ensure the image fits properly inside the container */
+            background-color: transparent; /* Just to ensure no background */
+        }
+
 
     </style>
+
 </head>
 <body>
 <header>
